# CarClean

./: .gitignore  CMakeLists.txt  README.md  ServerForIPC.py  config.h.in  luck_cross.cmake  luckfox_cross.cmake  luckfox_uart_test.py  py_cli_get.py  py_cli_post.py  py_fake_server.py  wang_ser.py
.github/workflows/: c-cpp.yml  ci.yml  simple_ci.yml
TestJson/: icp_report.json  icp_report_T1.json  icp_report_推送测试.json
lib/: libgpiod.la  libgpiod.so.3.1.1
lib/pkgconfig/: libgpiod.pc
src/: AIIPC.cpp  AIIPC.h  AIIPC.h.bak  BarrierGate.cpp  BarrierGate.h  DirectorLinkClient.cpp  DirectorLinkClient.h  NetFoundation.cpp  NetFoundation.h  Ntphelper.h  Point.h  Timer.h  UartMod.cpp  UartMod.h  WashReport.cpp  WashReport.cpp.bak  WashReport.h  WashReport.h.bak  build.sh  config.h  default_info.json  direct_link.json  dl_bak.txt  main.cpp  main.cpp.bak  net_cfg.json  rs232.json  uart.cpp  uart.h  wjc.txt  测试数据.json
src/armpoco/: lib_poco.tar.xz
src/armpoco/lib/: libPocoActiveRecord.so.94  libPocoCrypto.so.94  libPocoData.so.94  libPocoDataMySQL.so.94  libPocoDataODBC.so.94  libPocoDataPostgreSQL.so.94  libPocoDataSQLite.so.94  libPocoEncodings.so.94  libPocoFoundation.so.94  libPocoJSON.so.94  libPocoJWT.so.94  libPocoMongoDB.so.94  libPocoNet.so.94  libPocoNetSSL.so.94  libPocoPrometheus.so.94  libPocoRedis.so.94  libPocoUtil.so.94  libPocoXML.so.94  libPocoZip.so.94
src/config_json/: DirectorLinkCfg.json
src/install/lib/: libPocoActiveRecord.so.101  libPocoDataMySQL.so.101  libPocoPrometheus.so.101  libPocoRedis.so.101
src/install/lib/cmake/Poco/: PocoActiveRecordTargets-relwithdebinfo.cmake  PocoCryptoTargets-relwithdebinfo.cmake  PocoDataMySQLTargets-relwithdebinfo.cmake  PocoDataODBCTargets-relwithdebinfo.cmake  PocoDataPostgreSQLTargets-relwithdebinfo.cmake  PocoDataSQLiteTargets-relwithdebinfo.cmake  PocoDataTargets-relwithdebinfo.cmake  PocoEncodingsTargets-relwithdebinfo.cmake  PocoFoundationTargets-relwithdebinfo.cmake  PocoJSONTargets-relwithdebinfo.cmake  PocoJWTTargets-relwithdebinfo.cmake  PocoMongoDBTargets-relwithdebinfo.cmake  PocoNetSSLTargets-relwithdebinfo.cmake  PocoNetTargets-relwithdebinfo.cmake  PocoPrometheusTargets-relwithdebinfo.cmake  PocoRedisTargets-relwithdebinfo.cmake  PocoUtilTargets-relwithdebinfo.cmake  PocoXMLTargets-relwithdebinfo.cmake  PocoZipTargets-relwithdebinfo.cmake
src/rv1106_setup/: S44_StaticIP.sh  S45_StaticIP.sh  S95_StaticIP.sh  S97_Car.sh  S97_luck_car.bash  setup_rv1106.sh
src/spdlog/arm_spdlog/lib/pkgconfig/: spdlog.pc
src/spdlog/x86_spdlog/lib/cmake/spdlog/: spdlogConfigTargets.cmake
src/spdlog/x86_spdlog/lib/pkgconfig/: spdlog.pc
